# safe-kiosk-people-agent

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
deploy/: install.sh  uninstall.sh  validate-host.sh  wait-time-sync.sh
deploy/config/: config.toml.example
deploy/kismet/: 99-safe-kiosk-kismet.pref  kismet_site.conf.tmpl  package-version.txt  verify-installed.sh
deploy/network/: 10-safe-kiosk-capture.link.tmpl
deploy/networkmanager/: 90-safe-kiosk-people-agent-unmanaged.conf.tmpl
deploy/systemd/: safe-kiosk-people-agent.slice  safe-kiosk-people-agent.target  safe-kiosk-people-ble.service  safe-kiosk-people-interface-guard.service  safe-kiosk-people-kismet.service  safe-kiosk-people-metrics.service  safe-kiosk-people-recover@.service  safe-kiosk-people-time-sync.service  safe-kiosk-people-wifi.service
deploy/sysusers.d/: safe-kiosk-people-agent.conf
deploy/tmpfiles.d/: safe-kiosk-people-agent.conf
src/safe_kiosk_people_agent/: __init__.py  cli.py  clock.py  config.py  control.py  domain.py  entrypoints.py  log.py  privacy.py
tests/: conftest.py
tests/fault/: __init__.py  test_fault_contract.py
tests/integration/: test_metric_worker_restart.py
tests/soak/: __init__.py  assert_report.py  run_72h.sh  run_wifi_rebind_cycles.sh
tests/unit/: test_ble_collector.py  test_ble_hci.py  test_ble_worker.py  test_clock.py  test_collection_control.py  test_config.py  test_health_status.py  test_interface_guard.py  test_log_redaction.py  test_metrics_service.py  test_metrics_worker.py  test_networkmanager_roles.py  test_operator_commands.py  (+10 more)
(+66 files in other folders)
